<resources>
    <string name="app_name">StarWarsTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="chose_your_favourite_object">Chose your favourite object</string>
    <string name="star_wars_app">Star Wars App</string>
    <string name="starship">Starship</string>
    <string name="people">People</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="manned_starship">Manned Starship:</string>
    <string name="model">Model:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="passengers">Passengers:</string>
</resources>